= Changelog

== v2025.12.0 (work in progress)

=== Shapes

- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Display inherited ports as border nodes in diagrams.

=== Breaking changes

=== Dependency update

=== Bug fixes

=== Improvements

=== New features

- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Display inherited `PortUsages` as border nodes in diagrams
- https://github.com/eclipse-syson/syson/issues/1589[#1589] [explorer] Add a filter to hide expose elements in `ViewUsage`

== v2025.10.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1314[#1314] [diagrams] (Almost) All node descriptions are now synchronized (based on the exposed elements of _ViewUsages_).
This contribution allows to switch from one _ViewDefinition_ to another one in a _ViewUsage_ without having to re-create the diagram.

The following modules have been deleted:

* `syson-diagram-general-view`
* `syson-diagram-interconnection-view`
* `syson-diagram-actionflow-view`
* `syson-diagram-statetransition-view`

New `syson-standard-diagrams-view` module handles all the graphical nodes and edges of the previous modules.

All existing diagrams of these modules are automatically migrated to the remaining `syson-standard-diagrams-view` module.
During this migration, you may lost some graphical nodes and edges that were not handled by the synchronization mechanism.

This contribution introduces some breaking changes:

* `AllocationUsageNodeDescriptionProvider` has been deleted. It is now handled as any other `UsageNodeDescriptionProvider`.
* `UsageNestedActionUsageEdgeDescriptionProvider` has been deleted. It is now handled as any other `UsageNestedUsageEdgeDescriptionProvider`.